--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-postcss": "2.3.6",
     "gatsby-plugin-react-helmet": "3.3.6",
     "gatsby-plugin-sharp": "2.6.14",
+    "gatsby-plugin-tawk": "^1.0.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -50,5 +51,4 @@
     "prettier": "2.0.5",
     "tailwindcss": "1.4.6"
   }
-  
 }
